fin de l'exercice1

--- a/exercice1/index.html
+++ b/exercice1/index.html
@@ -10,6 +10,9 @@
     <title>Document</title>
   </head>
   <body>
+    <h6 id="presentation"></h6>
+    <h6 id="age"></h6>
+
     <script src="script.js"></script>
   </body>
 </html>
